Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-431

retry interval for failed memory allocating in o2iblnd is too long

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0
    • None
    • 3
    • 4803

      o2iblnd can dynamically grow TX descriptor pool at run time, it will take 10 seconds as retry interval if there is a failed allocating, this interval is too long and some RPC might timeout.

            liang Liang Zhen (Inactive)
            liang Liang Zhen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: